// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Soaper handle imdb black mirror s4e2 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "en",
      ],
      "title": "Black Mirror 4x2",
    },
    "url": "https://soaper.live/episode_5KDq78eGp1.html",
  },
]
`;

exports[`Soaper handle imdb full metal jacket 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "en",
      ],
      "title": "Full Metal Jacket (1987)",
    },
    "url": "https://soaper.live/movie_d8kdeypDY9.html",
  },
]
`;

exports[`Soaper handle lego heroes flash 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "en",
      ],
      "title": "LEGO DC Comics Super Heroes: The Flash (2018)",
    },
    "url": "https://soaper.live/movie_lOGwQVEDV0.html",
  },
]
`;

exports[`Soaper handle tmdb black mirror s4e2 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "en",
      ],
      "title": "Black Mirror 4x2",
    },
    "url": "https://soaper.live/episode_5KDq78eGp1.html",
  },
]
`;
